--- a/v24-25.1/pv_and_pvc.yaml
+++ b/v24-25.1/pv_and_pvc.yaml
@@ -1,22 +1,5 @@
-volumes:
-  - name: "bidrag-data"
-    hostPath:
-      path: "/var/www"
-  - name: "pseudonym-data"
-    hostPath:
-      path: "/var/www"
-
-volumeMounts:
-  - mountPath: "/bidrag-db"
-    name: "bidrag-data"
-
-volumeMounts:
-  - mountPath: "/pseudonym-db"
-    name: "pseudonym-data"
 ---
-
-
-apiVerison: v1
+apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: bidrag-pv
@@ -24,10 +7,9 @@ spec:
   capacity:
     storage: 1Gi
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   hostPath:
-    path: "/var/www"
-
+    path: "/var/www/bidrag"
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -35,12 +17,12 @@ metadata:
   name: bidrag-pvc
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
 ---
-apiVerison: v1
+apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: pseudonym-pv
@@ -48,10 +30,9 @@ spec:
   capacity:
     storage: 1Gi
   accessModes:
-    - ReadWriteMany
-  hostpath:
-    path: "/var/www"
-
+    - ReadWriteOnce
+  hostPath:
+    path: "/var/www/pseudonym"
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -59,7 +40,7 @@ metadata:
   name: pseudonym-pvc
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
